@@ -8,6 +8,7 @@ import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Random;
 
 public class Entity  {
     GamePanel gp;
@@ -21,6 +22,7 @@ public class Entity  {
     public int solidAreaDefaultX;
     public int solidAreaDefaultY;
     String[] dialogues = new String[20];
+    public Entity attacker;
 
     // STATE
     public int worldX, worldY;
@@ -29,12 +31,13 @@ public class Entity  {
     int dialogueIndex = 0;
     public boolean collisionOn = false;
     public boolean invincible = false;
-    boolean attacking = false;
+    public boolean attacking = false;
     public boolean alive = true;
     public boolean dying = false;
     boolean hpBarOn = false;
     public boolean onPath = false;
     public boolean knockBack = false;
+    public String knockBackDirection;
 
     // COUNTER
     public int actionLockCounter = 0;
@@ -62,6 +65,8 @@ public class Entity  {
     public int exp;
     public int nextLevelExp;
     public int coin;
+    public int motion1Duration;
+    public int motion2Duration;
     public Entity currentWeapon;
     public Entity currentShield;
     public Entity currentLight;
@@ -138,6 +143,26 @@ public class Entity  {
 
     public void interact() {}
 
+    public int getXDistance(Entity target) {
+        return Math.abs(worldX - target.worldX);
+    }
+
+    public int getYDistance(Entity target) {
+        return Math.abs(worldY - target.worldY);
+    }
+
+    public int getTileDistance(Entity target) {
+        return (getXDistance(target) + getYDistance(target)) / gp.tileSize;
+    }
+
+    public int getGoalCol(Entity target) {
+        return (target.worldX + target.solidArea.x) / gp.tileSize;
+    }
+
+    public int getGoalRow(Entity target) {
+        return (target.worldY + target.solidArea.y) / gp.tileSize;
+    }
+
     public void setAction() {}
 
     public boolean use(Entity entity) {return false;}
@@ -179,7 +204,7 @@ public class Entity  {
                 knockBack = false;
                 speed = deafaultSpeed;
             } else if(!collisionOn) {
-                switch(gp.player.direction) {
+                switch(knockBackDirection) {
                     case "up":
                         worldY -= speed;
                         break;
@@ -200,6 +225,8 @@ public class Entity  {
                 knockBack = false;
                 speed = deafaultSpeed;
             }
+        } else if(attacking) {
+            attacking();
         } else {
             setAction();
             checkCollision();
@@ -220,16 +247,16 @@ public class Entity  {
                         break;
                 }
             }
-        }
 
-        spriteCounter++;
-        if (spriteCounter > 24) {
-            if (spriteNum == 1) {
-                spriteNum = 2;
-            } else if (spriteNum == 2) {
-                spriteNum = 1;
+            spriteCounter++;
+            if (spriteCounter > 24) {
+                if (spriteNum == 1) {
+                    spriteNum = 2;
+                } else if (spriteNum == 2) {
+                    spriteNum = 1;
+                }
+                spriteCounter = 0;
             }
-            spriteCounter = 0;
         }
 
         if(invincible) {
@@ -245,6 +272,104 @@ public class Entity  {
         }
     }
 
+    public void checkAttackOrNot(int rate, int straight, int horizontal) {
+        boolean targetInRange = false;
+        int xDis = getXDistance(gp.player);
+        int yDis = getYDistance(gp.player);
+
+        switch(direction) {
+            case "up":
+                if(gp.player.worldY < worldY && yDis < straight && xDis < horizontal) {
+                    targetInRange = true;
+                }
+                break;
+            case "down":
+                if(gp.player.worldY > worldY && yDis < straight && xDis < horizontal) {
+                    targetInRange = true;
+                }
+                break;
+            case "left":
+                if(gp.player.worldX < worldX && xDis < straight && yDis < horizontal) {
+                    targetInRange = true;
+                }
+                break;
+            case "right":
+                if(gp.player.worldX > worldX && xDis < straight && yDis < horizontal) {
+                    targetInRange = true;
+                }
+                break;
+        }
+
+        if(targetInRange) {
+            // Check if it initiates an attack
+            int i = new Random().nextInt(rate);
+            if(i == 0) {
+                attacking = true;
+                spriteNum = 1;
+                spriteCounter = 0;
+                shotAvailableCounter = 0;
+            }
+        }
+    }
+
+    public void checkShotOrNot(int rate, int shotInterval) {
+        int i = new Random().nextInt(rate);
+        if(i == 0 && !projectile.alive && shotAvailableCounter == shotInterval) {
+            projectile.set(worldX, worldY, direction, true, this);
+            for(int j = 0; j < gp.projectile[1].length; j++) {
+                if(gp.projectile[gp.currentMap][j] == null) {
+                    gp.projectile[gp.currentMap][j] = projectile;
+                    break;
+                }
+            }
+            shotAvailableCounter = 0;
+        }
+    }
+
+    public void checkStopChasingOrNot(Entity target, int distance, int rate) {
+        if(getTileDistance(target) > distance) {
+            int i = new Random().nextInt(rate);
+            if(i == 0) {
+                onPath = false;
+            }
+        }
+    }
+
+    public void checkStartChasingOrNot(Entity target, int distance, int rate) {
+        if(getTileDistance(target) < distance) {
+            int i = new Random().nextInt(rate);
+            if(i == 0) {
+                onPath = true;
+            }
+        }
+    }
+
+    public void getRandomDirection() {
+        actionLockCounter++;
+
+        if (actionLockCounter == 120) {
+            Random random = new Random();
+            int i = random.nextInt(100) + 1; // pick a number from 1 to 100
+
+            if (i < 26) {
+                direction = "up";
+            }
+
+            if (i > 25 && i < 51) {
+                direction = "down";
+            }
+
+            if (i > 49 && i < 76) {
+                direction = "left";
+            }
+
+            if (i > 75 && i < 101) {
+                direction = "right";
+            }
+            actionLockCounter = 0;
+        }
+    }
+
     public void damagePlayer(int attack) {
         if(!gp.player.invincible) {
             gp.playSE(6);
@@ -257,79 +382,207 @@ public class Entity  {
         }
     }
 
+    public void attacking() {
+        spriteCounter++;
+
+        if(spriteCounter < motion1Duration) {
+            spriteNum = 1;
+        }
+
+        if(spriteCounter > motion1Duration && spriteCounter < motion2Duration) {
+            spriteNum = 2;
+
+            // Save the current woldX, worldY, solidArea
+            int currentWorldX = worldX;
+            int currentWorldY = worldY;
+            int solidAreaWidth = solidArea.width;
+            int solidAreaHeight = solidArea.height;
+
+            // Adjust player's worldX/Y for the attackArea
+            switch (direction) {
+                case "up": worldY -= attackArea.height; break;
+                case "down": worldY += attackArea.height; break;
+                case "left": worldX -= attackArea.width;
+                case "right": worldX += attackArea.width;
+            }
+
+            // attackArea becomes solidArea
+            solidArea.width = attackArea.width;
+            solidArea.height = attackArea.height;
+
+            if(type == typeMonster) {
+                if(gp.cChecker.checkPlayer(this)) {
+                    damagePlayer(attack);
+                }
+            } else {
+                // Check monster collision with updated values
+                int monsterIndex = gp.cChecker.checkEntity(this, gp.monster);
+                gp.player.damageMonster(monsterIndex, this, attack, currentWeapon.knockBackPower);
+
+                int iTileIndex = gp.cChecker.checkEntity(this, gp.iTile);
+                gp.player.damageInteractiveTile(iTileIndex);
+
+                int projectileIndex = gp.cChecker.checkEntity(this, gp.projectile);
+                gp.player.damageProjectile(projectileIndex);
+            }
+
+            worldX = currentWorldX;
+            worldY = currentWorldY;
+            solidArea.height = solidAreaHeight;
+            solidArea.width = solidAreaWidth;
+        }
+
+        if(spriteCounter > motion2Duration) {
+            spriteNum = 1;
+            spriteCounter = 0;
+            attacking = false;
+        }
+    }
+
+    public void setKnockBack(Entity target, Entity attacker, int knockBackPower) {
+        this.attacker = attacker;
+        target.knockBackDirection = attacker.direction;
+        target.speed += knockBackPower;
+        target.knockBack = true;
+    }
+
     public void draw(Graphics2D g2) {
         BufferedImage image = null;
         int screenX = worldX - gp.player.worldX + gp.player.screenX;
         int screenY = worldY - gp.player.worldY + gp.player.screenY;
 
-        if(worldX + gp.tileSize > gp.player.worldX - gp.player.screenX && worldX - gp.tileSize < gp.player.worldX + gp.player.screenX && worldY + gp.tileSize > gp.player.worldY - gp.player.screenY && worldY - gp.tileSize < gp.player.worldY + gp.player.screenY)
+        if(worldX + gp.tileSize > gp.player.worldX - gp.player.screenX && worldX - gp.tileSize < gp.player.worldX + gp.player.screenX && worldY + gp.tileSize > gp.player.worldY - gp.player.screenY && worldY - gp.tileSize < gp.player.worldY + gp.player.screenY) {
+            int tempScreenX = screenX;
+            int tempScreenY = screenY;
+
             switch (direction) {
                 case "up":
-                    if(spriteNum == 1) {image = up1;}
-                    if(spriteNum == 2) {image = up2;}
+                    if(!attacking) {
+                        if (spriteNum == 1) {image = up1;}
+                        if (spriteNum == 2) {image = up2;}
+                    }
+
+                    if(attacking) {
+                        tempScreenY = screenY - gp.tileSize;
+                        if (spriteNum == 1) {image = attackUp1;}
+                        if (spriteNum == 2) {image = attackUp2;}
+                    }
                     break;
                 case "down":
-                    if(spriteNum == 1) {image = down1;}
-                    if(spriteNum == 2) {image = down2;}
+                    if(!attacking) {
+                        if (spriteNum == 1) {image = down1;}
+                        if (spriteNum == 2) {image = down2;}
+                    }
+
+                    if(attacking) {
+                        if (spriteNum == 1) {image = attackDown1;}
+                        if (spriteNum == 2) {image = attackDown2;}
+                    }
                     break;
                 case "left":
-                    if(spriteNum == 1) {image = left1;}
-                    if(spriteNum == 2) {image = left2;}
+                    if(!attacking) {
+                        if (spriteNum == 1) {image = left1;}
+                        if (spriteNum == 2) {image = left2;}
+                    }
+
+                    if(attacking) {
+                        tempScreenX = screenX - gp.tileSize;
+                        if (spriteNum == 1) {image = attackLeft1;}
+                        if (spriteNum == 2) {image = attackLeft2;}
+                    }
                     break;
                 case "right":
-                    if(spriteNum == 1) {image = right1;}
-                    if(spriteNum == 2) {image = right2;}
+                    if(!attacking) {
+                        if (spriteNum == 1) {image = right1;}
+                        if (spriteNum == 2) {image = right2;}
+                    }
+
+                    if(attacking) {
+                        if (spriteNum == 1) {image = attackRight1;}
+                        if (spriteNum == 2) {image = attackRight2;}
+                    }
                     break;
                 case "upLeft":
-                    if(spriteNum == 1) {image = upLeft1;}
-                    if(spriteNum == 2) {image = upLeft2;}
-                    break;
-                case "upRight":
-                    if(spriteNum == 1) {image = upRight1;}
-                    if(spriteNum == 2) {image = upRight2;}
+                    if(!attacking) {
+                        if (spriteNum == 1) {image = up1;}
+                        if (spriteNum == 2) {image = up2;}
+                    }
+
+                    if(attacking) {
+                        tempScreenY = screenY - gp.tileSize;
+                        if (spriteNum == 1) {image = attackUp1;}
+                        if (spriteNum == 2) {image = attackUp2;}
+                    }
                     break;
                 case "downLeft":
-                    if(spriteNum == 1) {image = downLeft1;}
-                    if(spriteNum == 2) {image = downLeft2;}
+                    if(!attacking) {
+                        if (spriteNum == 1) {image = down1;}
+                        if (spriteNum == 2) {image = down2;}
+                    }
+
+                    if(attacking) {
+                        if (spriteNum == 1) {image = attackDown1;}
+                        if (spriteNum == 2) {image = attackDown2;}
+                    }
+                    break;
+                case "upRight":
+                    if(!attacking) {
+                        if (spriteNum == 1) {image = up1;}
+                        if (spriteNum == 2) {image = up2;}
+                    }
+
+                    if(attacking) {
+                        tempScreenY = screenY - gp.tileSize;
+                        if (spriteNum == 1) {image = attackUp1;}
+                        if (spriteNum == 2) {image = attackUp2;}
+                    }
                     break;
                 case "downRight":
-                    if(spriteNum == 1) {image = downRight1;}
-                    if(spriteNum == 2) {image = downRight2;}
+                    if(!attacking) {
+                        if (spriteNum == 1) {image = down1;}
+                        if (spriteNum == 2) {image = down2;}
+                    }
+
+                    if(attacking) {
+                        if (spriteNum == 1) {image = attackDown1;}
+                        if (spriteNum == 2) {image = attackDown2;}
+                    }
                     break;
             }
 
-        // MONSTER HP BAR
-        if(type == typeMonster && hpBarOn) {
-            double oneScale = (double)gp.tileSize / maxLife;
-            double hpBarValue = oneScale * life;
+            // MONSTER HP BAR
+            if (type == typeMonster && hpBarOn) {
+                double oneScale = (double) gp.tileSize / maxLife;
+                double hpBarValue = oneScale * life;
 
-            g2.setColor(new Color(35, 35, 35));
-            g2.fillRect(screenX - 1, screenY - 16, gp.tileSize + 2, 12);
+                g2.setColor(new Color(35, 35, 35));
+                g2.fillRect(screenX - 1, screenY - 16, gp.tileSize + 2, 12);
 
-            g2.setColor(new Color(255, 0, 30));
-            g2.fillRect(screenX, screenY - 15, (int)hpBarValue, 10);
+                g2.setColor(new Color(255, 0, 30));
+                g2.fillRect(screenX, screenY - 15, (int) hpBarValue, 10);
 
-            hpBarCounter++;
+                hpBarCounter++;
 
-            if(hpBarCounter > 600) {
-                hpBarCounter = 0;
-                hpBarOn = false;
+                if (hpBarCounter > 600) {
+                    hpBarCounter = 0;
+                    hpBarOn = false;
+                }
             }
+
+            if (invincible) {
+                hpBarOn = true;
+                hpBarCounter = 0;
+                changeAlpha(g2, 0.4F);
+            }
+
+            if (dying) {
+                dyingAnimation(g2);
+            }
+
+            g2.drawImage(image, tempScreenX, tempScreenY, null);
+
+            changeAlpha(g2, 1F);
         }
-
-        if(invincible) {
-            hpBarOn = true;
-            hpBarCounter = 0;
-            changeAlpha(g2, 0.4F);
-        }
-
-        if(dying) {
-            dyingAnimation(g2);
-        }
-
-        g2.drawImage(image, screenX, screenY, null);
-
-        changeAlpha(g2, 1F);
     }
 
     public void dyingAnimation(Graphics2D g2) {
@@ -425,8 +678,8 @@ public class Entity  {
 
         if(gp.pFinder.search()) {
             // Next worldX & worldY
-            int nextX = gp.pFinder.pathList.get(0).col * gp.tileSize;
-            int nextY = gp.pFinder.pathList.get(0).row * gp.tileSize;
+            int nextX = gp.pFinder.pathList.getFirst().col * gp.tileSize;
+            int nextY = gp.pFinder.pathList.getFirst().row * gp.tileSize;
 
             // Entity's solidArea position
             int enLeftX = worldX + solidArea.x;
